--- a/src/app/bizonylat/bizonylat-formaiellenorzes/bizonylat-formaiellenorzes.component.html
+++ b/src/app/bizonylat/bizonylat-formaiellenorzes/bizonylat-formaiellenorzes.component.html
@@ -1,4 +1,4 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} formai ellenőrzése</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} formai ellenőrzése</h5>
   <div>{{result}}</div>
 </div>
