--- a/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
+++ b/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} kiszállítva</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} kiszállítva</h5>
   <div>Kiszállítva: {{Dto.Kiszallitva | boolhun}}</div>
   <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" (click)="modositas()">Módosítás</button>
 </div>
