--- a/src/app/bizonylat/bizonylat-letoltesonlineszamlaformatumban/bizonylat-letoltesonlineszamlaformatumban.html
+++ b/src/app/bizonylat/bizonylat-letoltesonlineszamlaformatumban/bizonylat-letoltesonlineszamlaformatumban.html
@@ -1,4 +1,4 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} Letöltés online számla formátumban</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} Letöltés online számla formátumban</h5>
   <div>{{result}}</div>
 </div>
