--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -36,6 +36,7 @@
 
   <ng-template #bizonylategy>
     <app-bizonylat-egy [DtoOriginal]="OriginalBizonylat"
+                       [bizonylatTipus]=""
                        [bizonylatLeiro]="bizonylatLeiro"
                        [enTorles]="false">
     </app-bizonylat-egy>
