--- a/src/app/bizonylat/bizonylat-kifizetesrendben/bizonylat-kifizetesrendben.component.html
+++ b/src/app/bizonylat/bizonylat-kifizetesrendben/bizonylat-kifizetesrendben.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} kifizetés</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} kifizetés</h5>
   <div>Kifizetés rendben: {{Dto.Kifizetesrendben | boolhun}}</div>
   <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" (click)="modositas()">Módosítás</button>
 </div>
