--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -5,34 +5,30 @@
       <div>
         <div class="egylabel">Érvényes</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="ervenyes"
-               [(ngModel)]="ajanlatservice.AjanlatErvenyes" name="ervenyes">
+               [(ngModel)]="AjanlatErvenyes" name="ervenyes">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Szükséges áramerősség</div>
+        <div class="egylabel">Szüks. áramerősség</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="szuksaram"
-               maxlength="20" required autocomplete="off"
-               [(ngModel)]="ajanlatservice.AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
+               maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
+               [(ngModel)]="AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
       <div>
         <div class="egylabel">Tájolás</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="tajolas"
-               maxlength="20" required autocomplete="off"
-               [(ngModel)]="ajanlatservice.AjanlatParam.Tajolas" name="tajolas">
+               maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
+               [(ngModel)]="AjanlatParam.Tajolas" name="tajolas">
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
       <div>
         <div class="egylabel">Termelés</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="termeles"
-               required
-               [(ngModel)]="ajanlatservice.AjanlatParam.Termeles" name="termeles">
+               required style="display: inline-block;margin-right: 3px"
+               [(ngModel)]="AjanlatParam.Termeles" name="termeles">
       </div>
     </div>
 
@@ -41,69 +37,39 @@
         <div class="egylabel">Megjegyzés (tárgy)</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ajanlatservice.AjanlatParam.Megjegyzes" name="megjegyzes">
+               [(ngModel)]="AjanlatParam.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
       <div>
         <input type="text" class="form-control form-control-sm oszlop3" id="netto" style="text-align:right;display: inline-block"
-               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Netto">
+               readonly="true" [(ngModel)]="AjanlatParam.Netto">
 
         <input type="text" class="form-control form-control-sm oszlop3" id="afa" style="text-align:right;display: inline-block"
-               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Afa">
+               readonly="true" [(ngModel)]="AjanlatParam.Afa">
 
         <input type="text" class="form-control form-control-sm oszlop3" id="brutto" style="text-align:right;display: inline-block"
-               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Brutto">
+               readonly="true" [(ngModel)]="AjanlatParam.Brutto">
       </div>
     </div>
 
+    <app-ajanlat-tabla #tabla
+                       [items]="AjanlatParam.AjanlatBuf"
+                       [tetelTemplate]="tetel"
+                       (forid)="onId($event)">
+    </app-ajanlat-tabla>
 
-<!--  export eAjanlatContainerModeMode {
-  List = 1,
-  Szerkesztes = 2
-  }-->
-    <ng-container *ngIf="ajanlatservice.AjanlatContainerMode === 1">
-      <table class="table table-bordered table-sm table-responsive" style="border: none">
-        <thead>
-        <tr>
-          <th>Tételtipus</th>
-          <th>Cikk</th>
-          <th>Mennyiség</th>
-          <th>Egységár</th>
-          <th>Egységnyi teljesítmény</th>
-          <th>Netto</th>
-          <th>ÁFA</th>
-          <th>Brutto</th>
-          <th>Össz. teljesítmény</th>
-          <th>Garancia</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let item of ajanlatservice.AjanlatParam.AjanlatBuf; let i = index">
-          <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-              (click)="setClickedRow(i)">{{item.TetelTipus}}</td>
-          <td>{{item.CikkNev}}</td>
-          <td>{{item.Mennyiseg}}</td>
-          <td>{{item.EgysegAr}}</td>
-          <td>{{item.EgysegnyiTeljesitmeny}}</td>
-          <td>{{item.Netto}}</td>
-          <td>{{item.Afa}}</td>
-          <td>{{item.Brutto}}</td>
-          <td>{{item.OsszTeljesitmeny}}</td>
-          <td>{{item.Garancia}}</td>
-        </tr>
-        </tbody>
-      </table>
-    </ng-container>
-    <ng-container *ngIf="ajanlatservice.AjanlatContainerMode === 2">
-      <app-ajanlat-tetel></app-ajanlat-tetel>
-    </ng-container>
+    <ng-template #tetel>
+      <app-ajanlat-tetel [item]="ajanlatitem"
+                         (eventTetelKesz)="onTetelKesz($event)">
+      </app-ajanlat-tetel>
+    </ng-template>
 
     <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
+      <button class="btn btn-sm btn-primary" [disabled]="eppFrissit"
               type="button" (click)="onSubmit()">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
+      <button class="btn btn-sm btn-default" [disabled]="eppFrissit"
               style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 </div>
