projektkapcsolat új irat hibája

--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -74,7 +74,7 @@
   <ng-template #ujirategy>
     <app-irat-szerkesztes [uj]="true"
                           [enUgyfel]="false"
-                          [Ugyfelkod]="UgyfelKod"
+                          [Ugyfelkod]="Ugyfelkod"
                           (eventSzerkeszteskesz)="onUjiratutan($event)">
     </app-irat-szerkesztes>
   </ng-template>
