--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -5,22 +5,22 @@
 
     <ng-container *ngIf="!bizonylatLeiro.GenBizonylatszam">
       <div class="row no-gutters editform-row">
-        <div class="col-md-2">
-          <div class="editform-title">Bizonylatszám</div>
-        </div>
-        <div class="col-md-2">
-          <input type="text" class="form-control form-control-sm" id="bizonylatszam"
+        <div>
+          <div class="egylabel">Bizonylatszám</div>
+          <input type="text" class="form-control form-control-sm oszlop3" id="bizonylatszam"
                  maxlength="20" required autocomplete="off"
                  [(ngModel)]="bizonylatszam" name="bizonylatszam">
         </div>
       </div>
     </ng-container>
+
     <ng-container *ngIf="bizonylatLeiro.GenBizonylatszam">
-      <div>Biztosan kibocsátja ezt a bizonylatot?</div>
+      <div class="row no-gutters editform-row">
+        <div>Biztosan kibocsátja ezt a bizonylatot?</div>
+      </div>
     </ng-container>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="eppFrissit" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
